# quicksilver

./: .gitignore  Cargo.toml  background.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  privacy_policy.md  pyproject.toml  shared.js
assets/: create_icons.py  icon.eps
chromium/: manifest.json
examples/: profile.rs
scripts/: build.sh  create-chrome-zip.sh  create-chromium-zip.sh  serialize-model.py
src/: lib.rs
src/core/: mod.rs
src/core/fakeprint/: curve.rs  mod.rs  stft.rs
src/python/: mod.rs
src/web/: mod.rs  model.rs
